tests/fixtures/functional_patterns/positive/p06_partition.rs
fn split_even_odd(items: Vec<i32>) -> (Vec<i32>, Vec<i32>) {
    items.into_iter()
        .partition(|&x| x % 2 == 0)
}
